Improve unfurling metadata

--- a/src/posts/2019-07-02-code-review-experience/index.mdx
+++ b/src/posts/2019-07-02-code-review-experience/index.mdx
@@ -2,6 +2,7 @@
 path: "/code-review-experience"
 date: 2019-07-02T17:00:00.000Z
 title: "5 or 6 ways to design a Code Review ✨ Experience ✨"
+description: "A few of my favorite techniques for structuring pull requests, making it easier on my reviewers."
 ---
 
 import CommitMessageEditor from "./commit-message-editor";
