Use trailing slashes for paths
Netlify is auto-redirecting to a trailing /, so I guess I'll
just use that by default?

https://github.com/gatsbyjs/gatsby/issues/9207

--- a/src/posts/2019-06-18-js-strict-mode/index.mdx
+++ b/src/posts/2019-06-18-js-strict-mode/index.mdx
@@ -1,5 +1,5 @@
 ---
-path: "/js-strict-mode"
+path: "/js-strict-mode/"
 date: 2019-06-18T17:00:00.000Z
 title: "Deep dive into 'use strict' in JavaScript"
 description: "Why was strict mode introduced? Are we using it? Is it still relevant in 2019?"
