--- a/src/posts/2019-07-02-code-review-experience/commit-message-template.mdx
+++ b/src/posts/2019-07-02-code-review-experience/commit-message-template.mdx
@@ -16,13 +16,11 @@ _If you find yourself describing how the new code works, consider adding that as
 
 ##### Other solutions attempted
 
-If you attempted a different solution that ended up not working, explain it here. Failed attempts are still useful knowledge for reviewers!
-
-_Same thing here. Consider if this could be a code comment._
+If you attempted a different solution that ended up not working, explain it here or in a code comment. Failed attempts are still useful knowledge for reviewers!
 
 ##### Resources
 
-Consider if you can add any links to this commit message (or code comment). Examples include:
+Consider if you can add any links. Examples include:
 
 - A recent commit that caused the regression
 - A design mockup or screenshot
