--- a/src/posts/2019-10-17-jsx-html-differences/index.mdx
+++ b/src/posts/2019-10-17-jsx-html-differences/index.mdx
@@ -2,7 +2,7 @@
 path: "/jsx-html-differences/"
 date: 2019-10-17T17:00:00.000Z
 title: "Very Confusing differences between JSX and HTML"
-description: "When I work with both JSX and HTML, I get tripped up by subtle differences between the two languages. In this post, I'll share the differences that I find Very Confusing."
+description: "When I work with both JSX and HTML, I get tripped up by subtle differences between the two languages."
 image: "./name-declared-but-not-used-small.png"
 ---
 
