--- a/src/posts/2019-10-21-react-ref-autofocus/index.mdx
+++ b/src/posts/2019-10-21-react-ref-autofocus/index.mdx
@@ -276,7 +276,7 @@ const MyComponent = () => (
 
 If that works for you, that's great! For me, it works as a standalone sample, but then breaks down pretty fast when I integrate it into larger apps.
 
-- Does not work if any other element has an `autofocus` attribute when this component is mounted.
+- Does not work if any other element has an `autofocus` attribute when this component is mounted. (not true, delete this)
 - Does not work if another element steals focus right after rendering this component.
 - Does not work if the React root is not in the DOM when the component is rendered (I'm not sure why, tbh. re-verify this).
 
